--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   get_storage: ^2.1.1
   flutter_easyloading: ^3.0.5
   animated_text_kit: ^4.2.2
+  flutter_quill: ^9.3.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
