se esta maquetando un card expansion estatico para mostrar los syllabus_block

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   animated_text_kit: ^4.2.2
   flutter_quill: ^9.3.10
+  expansion_tile_card: ^3.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
