--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_quill: ^9.3.10
   expansion_tile_card: ^3.0.0
+  image_picker: ^1.1.1
+  permission_handler: ^11.3.1
+  flutter_quill_extensions: ^9.3.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
