--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   permission_handler: ^11.3.1
   file_picker: ^8.0.3
   image_cropper: ^6.0.0
+  flutter_speed_dial: ^7.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
